--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.21.0",
     "@faker-js/faker": "^7.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
